python-ldappool (2.0.0-1) experimental; urgency=medium

  [ Ondřej Nový ]
  * Fixed VCS URLs (https).
  * d/rules: Changed UPSTREAM_GIT protocol to https

  [ Thomas Goirand ]
  * New upstream release.
  * Fixed upstream git URL.

 -- Thomas Goirand <zigo@debian.org>  Wed, 13 Jul 2016 17:22:01 +0200

python-ldappool (1.0-1) unstable; urgency=medium

  * Initial release. (Closes: #752753)

 -- Thomas Goirand <zigo@debian.org>  Thu, 26 Jun 2014 16:10:51 +0800