@@ -7,6 +7,10 @@ python-ldappool (2.0.0-1) experimental; urgency=medium
   [ Thomas Goirand ]
   * New upstream release.
   * Fixed upstream git URL.
+  * Fixed (build-)depends for this release.
+  * Added Python 3 support.
+  * Using modernities from openstack-pkg-tools.
+  * Removed non-active uploaders.
 
  -- Thomas Goirand <zigo@debian.org>  Wed, 13 Jul 2016 17:22:01 +0200
 
